--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quick URL Shortener</title>
     <meta name="description" content="">
     <meta name="author" content="EJ">
 
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="twelve column text-align-center">
                     <input class="text" type="url" readonly placeholder="https://" id="resultShortened"> 
-                    <button class="button">
+                    <button id="copyButton" class="button">
                         Copy
                     </button>
                 </div>
