--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </div>
         <section class="footer">
             Powered by <a href="https://rapidapi.com/BigLobster/api/url-shortener-service">URL Shorterner Service</a>
+            Source <a href="https://github.com/Hutasako/url-shortener">here</a>
         </section>
     </div>
 </body>
