--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <section class="header text-align-center">
-            <h1>Quick URL Shorterner</h1>
+            <h1>Quick URL Shortener</h1>
             <p>Saw that link in half!</p>
         </section>
         <div class="row">
