added preloader gif

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         </div>
         <div class="row">
             <div class="row">
-                <div class="twelve column text-align-center">
+                <div class="twelve column text-align-center hidden" id="preloaderContainer">
+                    <img src="img/preloader-circles.png" alt="loading icon" srcset="">
+                </div>
+                <div class="twelve column text-align-center" id="resultContainer">
                     <input class="text" type="url" readonly placeholder="https://" id="resultShortened"> 
                     <button id="copyButton" class="button">
                         Copy
