added function to dismiss error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <section class="body">
             <div class="row">
                 <div class="twelve column text-align-center">
-                    <p class="text-failure hidden" id="errorContainer">Error: Something happened.</p>
+                    <div class="text-failure hidden" id="errorContainer">
+                        <p>Error: Something happened. Click to Dismiss.</p>
+                    </div>
                     <form method="post" id="urlForm">
                         <input class="u-full-width" type="url" name="url" placeholder="https://github.com" required autocomplete="off">
                         <button class="button-primary u-full-width" id="shortButton" type="submit">Shorten</button>
